methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:7: error: value faireMotif is not a member of Unit
def rangee(){faireMotif()faireMotif();faireMotif()}
                         ^